--- a/app/src/main/res/drawable-v24/buttons_add_excersise.xml
+++ b/app/src/main/res/drawable-v24/buttons_add_excersise.xml
@@ -4,8 +4,9 @@
 
         <gradient
             android:angle="90"
-            android:startColor="#FB8C00"
-            android:endColor="#E65100"/>
+            android:endColor="	#263238"
+            android:centerColor="#546E7A"
+            android:startColor="	#263238"/>
 
 
         <padding
@@ -15,10 +16,8 @@
             android:top="7dp"/>
 
         <stroke
-            android:width="2dp"/>
-
-        <corners
-            android:radius="40dp" />
+            android:width="2dp"
+            android:color="#CFB53B"/>
 
 
 
